# EasyCode

./: AGENTS.md  Agent.md  LICENSE  README.md  config.yaml  pyproject.toml
examples/: config.yaml  main.py
examples/domain_agents/: gen_agent.py  learn_agent.py  risk_agent.py  search_agent.py
examples/domain_agents/prompts/: gen_agent.md  learn_agent.md  risk_agent.md  search_agent.md
examples/domain_skills/codegen_tools/: SKILL_code_embedder.md  SKILL_code_generator.md  SKILL_code_retriever.md  SKILL_code_tester.md  SKILL_file_reader.md  code_embedder_impl.py  code_generator_impl.py  code_retriever_impl.py  code_tester_impl.py  file_reader_impl.py
examples/domain_skills/risk_tools/: SKILL_risk_check.md  risk_check_impl.py
examples/domain_skills/search_tools/: SKILL_web_search.md  web_search_impl.py
examples/workflows/: codegen_workflow.py  index_workflow.py  order_processing_wf.py  states.py
liteagent/: __init__.py  skill_registry.py
liteagent/core/: __init__.py  base_agent.py  base_skill.py  base_workflow.py  config.py  contract_parser.py  llm_interface.py  logger.py  memory_manager.py  rag_store.py
tests/: test_base_agent.py  test_base_skill.py  test_base_workflow.py  test_codegen_agents.py  test_codegen_skills.py  test_codegen_workflows.py  test_contract_parser.py  test_memory_manager.py  test_rag_store.py  test_skill_registry.py
