[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "liteagent"
version = "0.1.0"
description = "LiteAgent — enterprise multi-agent framework with Skill → Agent → Workflow architecture"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "langgraph>=0.2.0",
    "openai>=1.0",
    "pyyaml>=6.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
rag = [
    "chromadb>=0.4.0",
    "tiktoken>=0.5.0",
]

[tool.setuptools.packages.find]
include = ["liteagent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
